14. 페이징 전략 변경으로 불필요한 PostFetchCommand.java 제거