@@ -1,5 +1,6 @@
 package com.nexters.phochak.post.adapter.out.persistence;
 
+import com.nexters.phochak.post.application.port.in.CustomCursorDto;
 import com.nexters.phochak.post.application.port.in.PostFetchDto;
 import com.nexters.phochak.post.application.port.in.QPostFetchDto;
 import com.nexters.phochak.post.application.port.in.QPostFetchDto_PostShortsInformation;
@@ -13,7 +14,6 @@ import lombok.RequiredArgsConstructor;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static com.nexters.phochak.post.adapter.out.persistence.QHashtag.hashtag;
 import static com.nexters.phochak.post.adapter.out.persistence.QPostEntity.postEntity;
@@ -36,24 +36,24 @@ public class HashtagCustomRepositoryImpl implements HashtagCustomRepository {
     }
 
     @Override
-    public List<PostFetchDto> findSearchedPageByCommmand(PostFetchCommand command) {
+    public List<PostFetchDto> searchPagingByHashtag(final Long userId, final CustomCursorDto command) {
         Map<Long, PostFetchDto> resultMap = queryFactory.from(postEntity)
                 .join(postEntity.user)
                 .join(postEntity.shorts)
                 .where(filterByCursor(command)) // 커서 기반 페이징
                 .where(filterByCategory(command.getCategory()))
-                .where(searchByHashtag(command.getSearchHashtag()))
+                .where(searchByHashtag(command.getHashtag()))
                 .where(postEntity.user.id.notIn(
                         JPAExpressions
                                 .select(ignoredUserEntity.ignoredUserRelation.ignoredUser.id)
                                 .from(ignoredUserEntity)
-                                .where(ignoredUserEntity.ignoredUserRelation.user.id.eq(command.getUserId()))
+                                .where(ignoredUserEntity.ignoredUserRelation.user.id.eq(userId))
                 )) //본인이 ignore한 게시글 제거
                 .where(postEntity.id.notIn(
                         JPAExpressions
                                 .select(reportPost.post.id)
                                 .from(reportPost)
-                                .where(reportPost.reporter.id.eq(command.getUserId()))
+                                .where(reportPost.reporter.id.eq(userId))
                 )) // 본인이 신고한 게시글 제거
                 .where(postEntity.shorts.shortsStateEnum.eq(ShortsStateEnum.OK)) // shorts의 인코딩이 완료된 게시글
                 .limit(command.getPageSize())
@@ -69,7 +69,7 @@ public class HashtagCustomRepositoryImpl implements HashtagCustomRepository {
 
         return resultMap.keySet().stream()
                 .map(resultMap::get)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BooleanExpression searchByHashtag(String searchHashtag) {
@@ -86,15 +86,12 @@ public class HashtagCustomRepositoryImpl implements HashtagCustomRepository {
         return postEntity.postCategory.eq(category);
     }
 
-    private BooleanExpression filterByCursor(PostFetchCommand command) {
+    private BooleanExpression filterByCursor(CustomCursorDto command) {
         BooleanExpression defaultFilter = postEntity.id.lt(command.getLastId());
-        switch (command.getSortOption()) {
-            case VIEW:
-                return postEntity.view.loe(command.getSortValue()).and(defaultFilter);
-            case LIKE:
-                return postEntity.likes.size().loe(command.getSortValue()).and(defaultFilter);
-            default:
-                return defaultFilter;
-        }
+        return switch (command.getSortOption()) {
+            case VIEW -> postEntity.view.loe(command.getSortValue()).and(defaultFilter);
+            case LIKE -> postEntity.likes.size().loe(command.getSortValue()).and(defaultFilter);
+            default -> defaultFilter;
+        };
     }
 }
